# Intellectual-systems-451-Tikhonov-2022

./: README.txt  main_dagster.py  main_prefect.py  pyproject.toml  setup.py
pipelines/: main_dagster.py  main_prefect.py  setup.py
