[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Cadpig <70630020+Cadpig@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.7.11"
dagster = "^1.1.15"
pandas = "^1.5.3"
click = "^8.1.3"

[tool.poetry.scripts]
pipelines_prefect = "pipelines.main_prefect:api_flow"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
